# israel-stewart

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2025-09-23-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  CLAUDE.md  GEMINI.md  PHASE_2_PLAN.md  README.md  backup.txt  benchmark_dispersion.md  bug_core_codex.md  bug_core_codex2.md  bug_core_gemini.md  bug_core_gemini2.md  bug_solver_codex1.md  bug_solver_codex2.md  buglist.md  conftest.py  corrected_sound_wave_assessment.md  geminireview.md  geminisolver.md  jupyter_notebooks_plan.md  memory_performance_report.md  plan_bench_sound1.md  plan_implementation_verification.md  plan_log.md  plan_soundwaves.md  profile_solver_directly.py  pyproject.toml  run_complete_sound_wave_benchmark.py  run_minimal_sound_benchmark.py  run_profiled_sound_benchmark.py  run_sound_wave_benchmark.py  sound_wave_benchmark_results.md  sound_wave_fixes_summary.md  task_spectral.md  test_field_config.py  test_solver_performance.py  validate_optimizations.py
bugs/: bug_core_gemini3.md  bug_solver_gemini1.md  bug_solver_gemini3.md  jacobian_free.md
docs/: LOGGING.md
docs/source/: benchmarks.rst  conf.py  getting_started.rst  index.rst
docs/source/api/: israel_stewart.benchmarks.bjorken_flow.rst  israel_stewart.benchmarks.equilibration.rst  israel_stewart.benchmarks.rst  israel_stewart.benchmarks.sound_waves.rst  israel_stewart.core.constants.rst  israel_stewart.core.derivatives.rst  israel_stewart.core.fields.rst  israel_stewart.core.four_vectors.rst  israel_stewart.core.metrics.rst  israel_stewart.core.performance.rst  israel_stewart.core.rst  israel_stewart.core.spacetime_grid.rst  israel_stewart.core.stress_tensors.rst  israel_stewart.core.tensor_base.rst  israel_stewart.core.tensor_utils.rst  israel_stewart.core.tensors.rst  israel_stewart.core.transformations.rst  (+30 more)
israel_stewart/: __init__.py
israel_stewart/benchmarks/: bjorken_flow.py  equilibration.py  sound_waves.py
israel_stewart/core/: __init__.py  computational_optimization.py  constants.py  derivatives.py  fields.py  four_vectors.py  memory_optimization.py  metrics.py  performance.py  spacetime_grid.py  stress_tensors.py  tensor_base.py  tensor_utils.py  tensors.py  transformations.py
israel_stewart/equations/: __init__.py  coefficients.py  conservation.py  constraints.py  relaxation.py
israel_stewart/solvers/: __init__.py  finite_difference.py  implicit.py  spectral.py  splitting.py
israel_stewart/tests/: test_christoffel_symbols.py  test_conservation.py  test_convergence_validation.py  test_derivatives.py  test_fields_constraints.py  test_finite_difference.py  test_four_vectors.py  test_four_vectors_symbolic.py  test_implicit_solvers.py  test_relaxation_equations.py  test_solver_integration.py  test_spacetime_grid.py  test_spectral_solver.py  test_splitting.py  test_stress_tensors_symbolic.py  test_tensor_base.py  test_tensor_subclass_preservation.py  test_tensor_utils.py  test_transformations.py  test_transport_coefficients.py
israel_stewart/utils/: __init__.py  logging_config.py
notebooks/: 01_relativistic_tensors.ipynb  02_curved_spacetime.ipynb  02_curved_spacetime_bak.ipynb
profiler/: README.md  baseline_16x16x16_performance.json  detailed_performance_report.json  fft_efficiency_report.json  phase2_memory_optimization_report.md  phase3_computational_optimization_report.md  phase3_implementation_summary.md  plan_profiling.md  solver_profile.prof  test_memory_optimization.py  test_phase3_optimization.py  test_profiler.py
scripts/: build.sh  test.sh
tests/: __init__.py  test_logging_config.py  test_solver_logging_integration.py
tests/test_solvers/: __init__.py  test_finite_difference.py
tools/: check_ascii_controls.py  check_replacement_chars.py
